--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
         <img src="./img/logo.png">
         <h1>Blog Curso Git</h1>
     </div>
+    <div>
+        El contenido del Blog irá aquí
+    </div>
 </body>
 </html>
