--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="bar">
         <img class="logo" src="./img/logo.png">
-        <h1>Blog Curso Git</h1>
+        <h1>Blog Curso Git & GitHub</h1>
     </div>
     <div>
         El contenido del Blog irá aquí
