--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <img class="logo" src="./img/logo.png">
         <h1>Blog Curso Git & GitHub</h1>
     </div>
+    <div>
+        Aqui ira la publicidad
+    </div>
     <div class="container" id="content">
     </div>
 </body>
